// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`Should render expense summary with one (1) expense 1`] = `
<div>
  <h1>
    Viewing 
    1
     
    expense
     totalling 
    $2.35
  </h1>
</div>
`;

exports[`Should render expense summary with two (2) expense 1`] = `
<div>
  <h1>
    Viewing 
    23
     
    expenses
     totalling 
    $567,859,456.64
  </h1>
</div>
`;
